--- a/recruit-gui/src/app/accounts/accounts.component.html
+++ b/recruit-gui/src/app/accounts/accounts.component.html
@@ -36,27 +36,27 @@
 					<tr>
 						<td class="recruiter-active-subscription">Active Paid Subscription</td>
 						<td class="recruiter-active-subscription">{{activePaidSubscription.length}}</td>
-						<td><button class="btn btn-secondary arenella-action" (click)="toggleShowActivePaidSubscription()">Toggle</button></td>
+						<td><button class="btn btn-secondary" (click)="toggleShowActivePaidSubscription()">Toggle</button></td>
 					</tr>
 					<tr>
 						<td class="recruiter-credit-based-subscription">Credit Based</td>
 						<td class="recruiter-credit-based-subscription">{{creditBasedSubscription.length}}</td>
-						<td><button class="btn btn-secondary arenella-action" (click)="toggleShowCreditBasedSubscription()">Toggle</button></td>
+						<td><button class="btn btn-secondary" (click)="toggleShowCreditBasedSubscription()">Toggle</button></td>
 					</tr>
 					<tr>
 						<td class="recruiter-trial-subscription">Trial Subscription</td>
 						<td class="recruiter-trial-subscription">{{trialPeriodRecruiters.length}}</td>
-						<td><button class="btn btn-secondary arenella-btn" (click)="toggleShowTrialPeriodRecruiters()">Toggle</button></td>
+						<td><button class="btn btn-secondary" (click)="toggleShowTrialPeriodRecruiters()">Toggle</button></td>
 					</tr>
 					<tr>
 						<td class="recruiter-expired-subscription">Expired Subscription</td>
 						<td class="recruiter-expired-subscription">{{expiredSubscriptionRecruiters.length}}</td>
-						<td><button class="btn btn-secondary arenella-btn" (click)="toggleShowExpiredSubscriptionRecruiters()">Toggle</button></td>
+						<td><button class="btn btn-secondary" (click)="toggleShowExpiredSubscriptionRecruiters()">Toggle</button></td>
 					</tr>
 					<tr>
 						<td class="recruiter-firstgen">FirstGen Subscription</td>
 						<td class="recruiter-firstgen">{{firstGenActiveSubscription.length}}</td>
-						<td><button class="btn btn-secondary arenella-btn" (click)="toggleShowFirstGenActiveSubscription()">Toggle</button></td>
+						<td><button class="btn btn-secondary" (click)="toggleShowFirstGenActiveSubscription()">Toggle</button></td>
 					</tr>
 					<tr>
 						<td>Total  / Total active</td>
