--- a/recruit-gui/src/app/create-candidate/create-candidate.component.html
+++ b/recruit-gui/src/app/create-candidate/create-candidate.component.html
@@ -114,7 +114,7 @@
 							network of recruiters and clients. 
 							</p>
 							<div>
-								<button (click)="addCandidate()" [disabled]="uploadButtonDisabled()" style="margin-bottom:20px;">Save</button>
+								<button (click)="addCandidate()" [disabled]="uploadButtonDisabled()" class="btn btn-secondary arenella-btn" style="margin-bottom:20px;">Save</button>
 							</div>
 						</div>
 					</div>
