--- a/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.html
+++ b/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.html
@@ -52,7 +52,7 @@
 								<tr>
 									<td></td>
 									<td>
-										<button (click)="startFreeTrial()" [disabled]="isFreeTrialButtonEnabled()" style="margin-top:10px;float:right;">Start free trial</button>
+										<button (click)="startFreeTrial()" [disabled]="isFreeTrialButtonEnabled()" class="btn btn-secondary arenella-btn" style="margin-top:10px;float:right;">Start free trial</button>
 									</td>
 								</tr>
 							</table>
