--- a/recruit-gui/src/app/app.component.css
+++ b/recruit-gui/src/app/app.component.css
@@ -98,28 +98,21 @@
 }
 
 .signup-candidate{
-	background:green;
+	background:darkgreen;
 	width:165px;
 }
-/*
-.modal-body{
-    font-size: large;
-    height:400px;
-    text-align: center;
+
+@media (max-width:700px)  {
+	.signup-candidate{
+		width:48%;
+		margin:1%;
+	}
+	.signup-recruiter{
+		width:48%;
+		margin:1%;
+	}
 }
-*/
-/*
-.modal-title{
-	margin-left:20px;
-}
-*/
-/*
-.modal-header{
-     background:#181414;
-     color:#6A5ACD;
-     font-weight:bold;
-}
-*/
+
 .filter-close-box{
 	cursor:pointer;
 }
