--- a/recruit-gui/src/app/listing/listing.component.html
+++ b/recruit-gui/src/app/listing/listing.component.html
@@ -169,7 +169,6 @@
 		</div>
 	</div>
 </dialog>
-
 <!-- Publicity Box -->
 <dialog #publicityBox>
 	<div class="modal-header">
@@ -207,7 +206,7 @@
 				<div *ngIf="createAlertStep == 0">
 					<P>1/3 Select a Contract type</P>
 					<select formControlName="contractType">
-						<option *ngFor="let type of getContractTypeOptions()" [ngValue]="type.value">{{type.label}}</option>
+						<option *ngFor="let type of contractTypeOptions" [ngValue]="type.value">{{type.label}}</option>
 					</select>
 				</div>
 				<div *ngIf="createAlertStep == 1">
