--- a/recruit-gui/src/app/suggestions/suggestions.component.two.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.two.css
@@ -174,6 +174,14 @@ textarea {
 
 .suggestion-result-icons{
 	margin-top:50px;
+	margin-left:40px;
+}
+
+@media (max-width:700px)  {
+	.suggestion-result-icons{
+		margin-top:50px;
+		margin-left:0px;
+	}	
 }
 
 .suggestion-result-footer{
