feedback for forgotten password

--- a/recruit-gui/src/app/login-user/login-user.component.html
+++ b/recruit-gui/src/app/login-user/login-user.component.html
@@ -72,7 +72,7 @@
  	</div>
 	<div class="feedbackBox">
 		<div class="modal-body">
-			Invalid Login attempt
+			{{failureMessage}}
 		</div>       
 	</div>
 </dialog>
