--- a/recruit-gui/src/app/accounts/accounts.component.html
+++ b/recruit-gui/src/app/accounts/accounts.component.html
@@ -155,8 +155,8 @@
 		      				{{candidate.roleSought}}
 		      			</td>
 		      			<td class="medicol">
-		      				<button	class="control-spacing btn btn-secondary arenella-btn" (click)="markCandidateAsAvailable(candidate.candidateId)">Available</button>
-		      				<button	class="control-spacing btn btn-secondary arenella-btn" (click)="disableNoLongerAvailableFlaggedAsUnavailableCandidate(candidate.candidateId)">Disable</button>
+		      				<button	class="btn btn-secondary arenella-btn" style="min-width:90px;" (click)="updateCandidateAvailability(candidate.candidateId, 'enable')">Available</button>
+		      				<button	class="btn btn-secondary arenella-btn" style="min-width:90px;" (click)="updateCandidateAvailability(candidate.candidateId, 'disable')">Disable</button>
 		      			</td>
 		      		</tr>
 		      	</tbody>
@@ -179,9 +179,11 @@
 				<div style="float:left">
 					<label 	class="control-spacing candidate-lbl">email</label>
 					<input 	class="control-spacing candidate-input" type="text" formControlName="email"/>
-					<button	class="control-spacing btn btn-secondary arenella-btn" (click)="fetchCandidates()">Filter</button>
+					
 				</div>
-				
+				<div class="action-buttons">
+					<button	class="control-spacing btn btn-secondary arenella-btn" style="margin-top:10px;" (click)="fetchCandidates()">Filter</button>
+				</div>
 			</form>
 		
 			<!-- Candidates table -->  
@@ -205,11 +207,11 @@
 		            	    <td class="candidate-tab-col medicol">
 		            	    	<div [ngSwitch]="candidate.available">
 		                			<div  *ngSwitchCase="true">
-		                				<button	class="control-spacing btn btn-secondary arenella-btn" (click)="disableCandidate(candidate.candidateId)">Disable</button>
+		                				<button	class="btn btn-secondary arenella-btn" style="min-width:100px;" (click)="updateCandidateAvailability(candidate.candidateId, 'disable')">Disable</button>
 		                			</div>
 		                			<div>
-		                				<button	class="control-spacing btn btn-secondary arenella-btn" *ngIf="candidateToDelete == '' || candidateToDelete != candidate.candidateId" (click)="deleteCandidate(candidate.candidateId)">Delete</button>
-		                				<button	class="control-spacing btn btn-secondary arenella-btn" *ngIf="candidateToDelete == candidate.candidateId" (click)="confirmDeleteCandidate()" style="background:red">Confirm</button>
+		                				<button	class="btn btn-secondary arenella-btn" style="min-width:100px;" *ngIf="candidateToDelete == '' || candidateToDelete != candidate.candidateId" (click)="deleteCandidate(candidate.candidateId)">Delete</button>
+		                				<button	class="btn btn-secondary arenella-btn" style="min-width:100px;" *ngIf="candidateToDelete == candidate.candidateId" (click)="confirmDeleteCandidate()" style="background:red">Confirm</button>
 		                			</div>
 		                		</div>
 		                	</td>
@@ -243,8 +245,8 @@
 		      			<td *ngIf="skill.validationStatus == 'ACCEPTED'" class="skillAccepted">{{skill.skill}}</td>
 		      			<td *ngIf="skill.validationStatus == 'REJECTED'" class="skillRejected">{{skill.skill}}</td>
 		      			<td>
-		      				<button	class="control-spacing btn btn-secondary arenella-btn" (click)="updateSkillValidationStatus(skill.skill, 'ACCEPTED')">Accept</button>
-		      				<button	class="control-spacing btn btn-secondary arenella-btn" (click)="updateSkillValidationStatus(skill.skill, 'REJECTED')">Reject</button>
+		      				<button	class="btn btn-secondary arenella-btn" style="min-width:100px;" (click)="updateSkillValidationStatus(skill.skill, 'ACCEPTED')">Accept</button>
+		      				<button	class="btn btn-secondary arenella-btn" style="min-width:100px;" (click)="updateSkillValidationStatus(skill.skill, 'REJECTED')">Reject</button>
 		      			</td>
 		      		</tr>
 		      	</tbody>
@@ -278,7 +280,7 @@
 						<td class="medicol">{{subscriptionAction.type}}</td>
 						<td class="medicol">{{subscriptionAction.status}}</td>
 						<td>
-							<button class="btn btn-secondary arenella-btn" *ngFor="let action of subscriptionAction.actions" (click)="performAction(subscriptionAction, action)">{{frmtSubscriptionAction(action)}}</button>
+							<button class="btn btn-secondary arenella-btn" style="min-width:100px;"  *ngFor="let action of subscriptionAction.actions" (click)="performAction(subscriptionAction, action)">{{frmtSubscriptionAction(action)}}</button>
 						</td>
 					</tr>
 				</tbody>
