--- a/recruit-gui/src/app/suggestions/suggestions.component.html
+++ b/recruit-gui/src/app/suggestions/suggestions.component.html
@@ -174,7 +174,7 @@
 
 		<!-- Suggestion Profile -->
 		<div *ngIf="currentView !== 'suggestion-results' && currentView !== 'inline-cv' && currentView !== 'saved-candidates'">
-			<div class="action-buttons">
+			<div class="action-buttons" *ngIf="!isViewOnly()">
 			
 				<a class="currliculum-link" (click)="doCreditCheckByCount()" href="{{getCurriculumDownloadUrl(suggestedCandidate.candidateId)}}" *ngIf="passedCreditCheck && (!isCandidate()) && (lastView != 'saved-candidates' || (lastView == 'saved-candidates' && !isNoLongerAvailable()))">
 					<button class="btn btn-secondary arenella-btn {{suggestionMobileBtnClass}}">Download CV</button>
@@ -195,6 +195,25 @@
 				<button class="btn btn-secondary arenella-btn {{suggestionMobileBtnClass}}" (click)="showSavedCandidates()" 						*ngIf="lastView === 'saved-candidates'  && !isCandidate()">Back</button>
 				
 			</div>
+			
+			<div class="action-buttons" *ngIf="isViewOnly()">
+			
+				<a class="currliculum-link" (click)="doCreditCheckByCount()" href="{{getCurriculumDownloadUrl(suggestedCandidate.candidateId)}}" *ngIf="passedCreditCheck && (!isCandidate()) && (lastView != 'saved-candidates' || (lastView == 'saved-candidates' && !isNoLongerAvailable()))">
+					<button class="btn btn-secondary arenella-btn {{suggestionMobileBtnClass}}">Download CV</button>
+				</a>
+			
+				<button class="btn btn-secondary arenella-btn {{suggestionMobileBtnClass}}" (click)="handleNoCredit()" *ngIf="!passedCreditCheck && (!isCandidate()) && (lastView != 'saved-candidates' || (lastView == 'saved-candidates' && !isNoLongerAvailable()))">Download CV</button>
+				<button class="btn btn-secondary arenella-btn" (click)="showInlineCVView()" 							*ngIf="!isMobile && (lastView != 'saved-candidates' || (lastView == 'saved-candidates' && !isNoLongerAvailable())) && !isCandidate()">Display CV</button>
+			
+				<button class="btn btn-secondary arenella-btn {{suggestionMobileBtnClass}}" (click)="rememberCandidate(suggestedCandidate)" 		*ngIf="lastView != 'saved-candidates' && !isSavedCandidate(suggestedCandidate) && !isCandidate()" title="Add candidate to your list of saved candidates">Save Candidate</button>
+				<button class="btn btn-secondary arenella-btn {{suggestionMobileBtnClass}}" (click)="rememberCandidate(suggestedCandidate)" 		*ngIf="lastView != 'saved-candidates' && isSavedCandidate(suggestedCandidate) && !isCandidate()" title="Add candidate to your list of saved candidates" disabled>Save Candidate</button>
+				<button class="btn btn-secondary arenella-btn {{suggestionMobileBtnClass}}" (click)="forgetCandidate()" 							*ngIf="lastView === 'saved-candidates'" title="removed candidate from your list of saved candidates">Unsave Candidate</button>
+				<button class="btn btn-secondary arenella-btn {{suggestionMobileBtnClass}}" (click)="showNotesDialog(notesBox,suggestedCandidate)" 	*ngIf="lastView === 'saved-candidates'">Notes</button>
+				
+				<button class="btn btn-secondary arenella-btn {{suggestionMobileBtnClass}}" (click)="backToNewsFeed()" 						*ngIf="lastView != 'saved-candidates'  && !isCandidate()">Back</button>
+				
+			</div>
+			
 		</div>
 	
 		<div *ngIf="currentView === 'suggested-canidate-overview'" style="margin-top:10px;">
