--- a/recruit-gui/src/app/app.component.html
+++ b/recruit-gui/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-arenella-primary nav-primary">
+<nav class="navbar navbar-expand-lg navbar-light bg-arenella-primary nav-primary" id="page-top">
   <h1>Arenella ICT</h1>
 </nav>
 
