--- a/recruit-gui/src/app/newsfeed/newsfeed.component.css
+++ b/recruit-gui/src/app/newsfeed/newsfeed.component.css
@@ -5,7 +5,7 @@
 }
 
 .news-feed-item{
-	border:1px solid blue;
+	border:2px solid darkgreen;
 	margin:20px;
 }
 
@@ -13,11 +13,26 @@
 	padding:10px;
 	text-align:center;
 	font-weight:bold;
+	background:lightgrey;
+	color:black;
 }
 
 .news-feed-item-body{
 	min-height:50px;
 	padding:10px;
 	text-align:center;
+	
+}
+
+.newsfeed-footer{
+	padding:20px;
+}
+
+@media (max-width: 768px) {
+	.news-feed{
+		margin: 0 auto;
+		margin-top:20px;
+		width:100%;	
+	}
 	
 }
