refactor saved cadidates to new component -> only results, profile 2b in separate component

--- a/recruit-gui/src/app/suggestions/suggestions.component.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.css
@@ -179,12 +179,12 @@
 	width:100%;	
 	height:10px;
 }
-
+/**
 .suggestion-icon-mobile{
 	width:48%;
 	margin-right:2%;
 	margin-bottom:2%;
-}
+}*/
 /*
 .button-panel-mobile{
 	width:100%;
